--- a/down/Output/RM_typeA.build_log.htm
+++ b/down/Output/RM_typeA.build_log.htm
@@ -17,74 +17,74 @@ Library Manager: ArmAr.exe V5.06 update 1 (build 61)
 Hex Converter:   FromElf.exe V5.06 update 1 (build 61)
 CPU DLL:         SARMCM3.DLL V5.18
 Dialog DLL:      DCM.DLL V1.13.6.0
-Target DLL:      Segger\JL2CM3.dll V2.99.18.0
+Target DLL:      UL2CM3.DLL V1.157.5.0
 Dialog DLL:      TCM.DLL V1.14.8.0
  
 <h2>Project:</h2>
 C:\Users\lagrange\Documents\GitHub\neuq_rm\down\Project\RM-F427.uvprojx
-Project File Date:  01/10/2020
+Project File Date:  01/15/2020
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 1 (build 61)', folder: 'E:\keil5\ARM\ARMCC\Bin'
 Rebuild target '╣вел'
 assembling startup_stm32f427_437xx.s...
 compiling system_stm32f4xx.c...
-compiling stm32f4xx_cryp_des.c...
-compiling misc.c...
-compiling stm32f4xx_cryp_aes.c...
-compiling stm32f4xx_adc.c...
-compiling stm32f4xx_cryp_tdes.c...
 compiling stm32f4xx_can.c...
-compiling stm32f4xx_dma.c...
-compiling stm32f4xx_flash.c...
-compiling stm32f4xx_fmc.c...
+compiling misc.c...
+compiling stm32f4xx_cryp_des.c...
+compiling stm32f4xx_adc.c...
+compiling stm32f4xx_cryp_aes.c...
+compiling stm32f4xx_cryp_tdes.c...
 compiling stm32f4xx_dac.c...
+compiling stm32f4xx_dma.c...
 compiling stm32f4xx_flash_ramfunc.c...
+compiling stm32f4xx_fmc.c...
 compiling stm32f4xx_dma2d.c...
+compiling stm32f4xx_flash.c...
 compiling stm32f4xx_gpio.c...
 compiling stm32f4xx_i2c.c...
 compiling stm32f4xx_hash_md5.c...
-compiling stm32f4xx_sdio.c...
 compiling stm32f4xx_rcc.c...
 compiling stm32f4xx_pwr.c...
+compiling stm32f4xx_sdio.c...
 compiling stm32f4xx_spi.c...
 compiling stm32f4xx_rtc.c...
 compiling stm32f4xx_syscfg.c...
 compiling stm32f4xx_cryp.c...
 compiling stm32f4xx_usart.c...
-compiling stm32f4xx_tim.c...
 compiling stm32f4xx_hash.c...
-compiling kinematic.c...
-compiling angle_pid.c...
+compiling stm32f4xx_tim.c...
 compiling stm32f4xx_it.c...
+compiling kinematic.c...
 compiling speed_pid.c...
-compiling shoot.c...
+compiling angle_pid.c...
 compiling mode.c...
+compiling shoot.c...
 compiling My_Init.c...
 compiling json.c...
-compiling main.c...
 compiling bsp_debug_usart.c...
+compiling main.c...
 compiling bsp_uart7.c...
-compiling sys.c...
 compiling LED.c...
 compiling delay.c...
+compiling sys.c...
 compiling power.c...
-compiling can.c...
-compiling buzzer.c...
 compiling timer.c...
-compiling motor.c...
+compiling buzzer.c...
 compiling DJi_remote.c...
-compiling stmflash.c...
+compiling can.c...
 compiling myflash.c...
-compiling key.c...
+compiling motor.c...
+compiling stmflash.c...
 compiling jansson_config.c...
 compiling fric.c...
+compiling key.c...
 compiling gimbal.c...
 compiling remote_code.c...
-compiling Tim3_Events.c...
 compiling FS_remote.c...
+compiling Tim3_Events.c...
 linking...
-Program Size: Code=32540 RO-data=628 RW-data=248 ZI-data=9640  
+Program Size: Code=32020 RO-data=628 RW-data=248 ZI-data=9640  
 "..\Output\RM_typeA.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -109,9 +109,9 @@ Package Vendor: Keil
 
    * Component: Keil::Data Exchange:JSON:Jansson:2.7.0
       Include file:  src\jansson.h
-      Library file:  lib\jansson_CM3LE.lib
       Source file:   src\jansson_config.c
-Build Time Elapsed:  00:00:19
+      Library file:  lib\jansson_CM3LE.lib
+Build Time Elapsed:  00:00:16
 </pre>
 </body>
 </html>
