--- a/down/Output/RM_typeA.build_log.htm
+++ b/down/Output/RM_typeA.build_log.htm
@@ -28,67 +28,70 @@ Project File Date:  07/28/2020
 *** Using Compiler 'V5.06 update 1 (build 61)', folder: 'F:\keil\ARM\ARMCC\Bin'
 Rebuild target '╣вел'
 assembling startup_stm32f427_437xx.s...
-compiling stm32f4xx_cryp_tdes.c...
-compiling stm32f4xx_cryp_des.c...
-compiling misc.c...
-compiling stm32f4xx_dac.c...
 compiling system_stm32f4xx.c...
+compiling stm32f4xx_cryp_des.c...
+compiling stm32f4xx_cryp_tdes.c...
+compiling stm32f4xx_adc.c...
+compiling stm32f4xx_dac.c...
+compiling misc.c...
+compiling stm32f4xx_dma.c...
 compiling stm32f4xx_can.c...
 compiling stm32f4xx_dma2d.c...
-compiling stm32f4xx_adc.c...
 compiling stm32f4xx_flash.c...
-compiling stm32f4xx_dma.c...
 compiling stm32f4xx_cryp_aes.c...
+compiling stm32f4xx_flash_ramfunc.c...
+compiling stm32f4xx_hash_md5.c...
+compiling stm32f4xx_rcc.c...
+compiling stm32f4xx_gpio.c...
+compiling stm32f4xx_pwr.c...
+compiling stm32f4xx_i2c.c...
 compiling stm32f4xx_syscfg.c...
 compiling stm32f4xx_spi.c...
-compiling stm32f4xx_pwr.c...
-compiling stm32f4xx_flash_ramfunc.c...
-compiling stm32f4xx_gpio.c...
-compiling stm32f4xx_sdio.c...
-compiling stm32f4xx_hash_md5.c...
-compiling stm32f4xx_i2c.c...
-compiling stm32f4xx_rcc.c...
 compiling stm32f4xx_fmc.c...
+compiling stm32f4xx_sdio.c...
 compiling stm32f4xx_rtc.c...
 compiling kinematic.c...
 compiling angle_pid.c...
 compiling speed_pid.c...
 compiling delay.c...
-compiling shoot.c...
-compiling sys.c...
 compiling main.c...
+compiling sys.c...
+compiling shoot.c...
 compiling mode.c...
 compiling stm32f4xx_hash.c...
 compiling stm32f4xx_cryp.c...
+compiling stm32f4xx_usart.c...
 compiling stm32f4xx_tim.c...
 compiling My_Init.c...
-compiling stm32f4xx_usart.c...
 compiling stm32f4xx_it.c...
-compiling timer.c...
 compiling json.c...
+compiling timer.c...
 compiling judge.c...
 compiling can.c...
-compiling buzzer.c...
 compiling bsp_debug_usart.c...
-compiling motor.c...
+compiling buzzer.c...
 compiling myflash.c...
-compiling uart5.c...
+compiling motor.c...
+..\Hardware\motor\motor.c(164): warning:  #223-D: function "CAN2_Send_GIMBAL_Msg" declared implicitly
+  	CAN2_Send_GIMBAL_Msg(current_msg);
+..\Hardware\motor\motor.c: 1 warning, 0 errors
 compiling stmflash.c...
-compiling power_limitation.c...
+compiling uart5.c...
 compiling key.c...
+compiling power_limitation.c...
 compiling LED.c...
 compiling bsp_uart7.c...
-compiling remote_code.c...
-compiling FS_remote.c...
 compiling jansson_config.c...
+compiling FS_remote.c...
+compiling remote_code.c...
 compiling power.c...
-compiling DJi_remote.c...
 compiling Tim3_Events.c...
-compiling fric.c...
+compiling DJi_remote.c...
 compiling gimbal.c...
+compiling fric.c...
 linking...
-Program Size: Code=32084 RO-data=628 RW-data=252 ZI-data=9900  
-"..\Output\RM_typeA.axf" - 0 Error(s), 0 Warning(s).
+Program Size: Code=33948 RO-data=628 RW-data=252 ZI-data=9900  
+"..\Output\RM_typeA.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -111,10 +114,10 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: Keil::Data Exchange:JSON:Jansson:2.7.0
-      Library file:  lib\jansson_CM3LE.lib
       Include file:  src\jansson.h
+      Library file:  lib\jansson_CM3LE.lib
       Source file:   src\jansson_config.c
-Build Time Elapsed:  00:00:07
+Build Time Elapsed:  00:00:08
 </pre>
 </body>
 </html>
